added configurator, fixed preview

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
     
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script defer type="text/javascript" src="main.js"></script>   
+    <script defer type="text/javascript" src="main.js"></script>
 
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <button onclick="generateRomaji()">Generate Romaji (unfinished)</button>
             </div>
             <div>
-                Romaji goes here. Check it for accuracy, correct pacing, etc.<br>
+                Romaji goes here. Check for accuracy, pacing, etc.<br>
                 A space indicates the start of a new kana.<br>
                 A | (pipe symbol) indicates the start of a new word.<br>
                 <textarea id="input-romaji" rows=2 cols=80></textarea>
@@ -36,9 +36,33 @@
             </div>
         </div>
         <div class="column-right">
-            <div style="position:absolute">
+            <div id="config">
+                <div>
+                    <input onchange="readParameters(0)" type="number" value="1.2" title="Kana spacing"
+                            id="config-kana-spacing">Horizontal kana spacing</input>
+                    <button onClick="revertConfig(0)">default</button>
+                </div>
+                <div>
+                    <input onchange="readParameters(1)" type="number" value="1.0" title="Kana size"
+                            id="config-kana-size">Kana size</input>
+                    <button onClick="revertConfig(1)">default</button>
+                </div>
+                <div>
+                    <input onchange="readParameters(2)" type="number" value="0.6" title="Romaji size"
+                            id="config-romaji-size">Romaji size</input>
+                    <button onClick="revertConfig(2)">default</button>
+                </div>
+                <div>
+                    <input onchange="readParameters(3)" type="number" value="1" title="Romaji height"
+                            id="config-romaji-height">Romaji height</input>
+                    <button onClick="revertConfig(3)">default</button>
+                </div>
+            </div>
+            
+            <div class="lyrics-container">
                 <div id="lyrics-preview"></div>
             </div>
         </div>
     </div>
 </body>
+</html>
