bugfixes, basic error reporting

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <textarea id="input-japanese" rows=2 cols=80></textarea>
                 <br>
-                <button onclick="generateRomaji()">Generate Romaji (unfinished)</button>
+                <button disabled=true onclick="generateRomaji()">Generate Romaji (unfinished)</button>
             </div>
             <div>
                 Romaji goes here. Check for accuracy, pacing, etc.<br>
@@ -59,8 +59,12 @@
                 </div>
             </div>
             
-            <div class="lyrics-container">
-                <div id="lyrics-preview"></div>
+            <div>
+                <br>
+                Preview:
+                <div class="lyrics-container">
+                    <div id="lyrics-preview"></div>
+                </div>
             </div>
         </div>
     </div>
