--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 Romaji goes here. Check for accuracy, pacing, etc.<br>
                 A space indicates the start of a new kana.<br>
                 A | (pipe symbol) indicates the start of a new word.<br>
+                An * (asterisk) indicates a spot where no pronounciation should go.<br>
                 <textarea onchange="readParameters(-1)" id="input-romaji" rows=2 cols=80></textarea>
                 <br>
                 <button onclick="generateLyricString()">Copy Output to Clipboard</button>
