--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     
+    <script src="url/to/kuroshiro.min.js"></script>
+    <script src="url/to/kuroshiro-analyzer-kuromoji.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="main.css">
     <script defer type="text/javascript" src="main.js"></script>
 
@@ -23,6 +27,7 @@
                 <textarea onchange="readParameters(-1)" id="input-japanese" rows=2 cols=80></textarea>
                 <br>
                 <button disabled=true onclick="generateRomaji()">Generate Romaji (unfinished)</button>
+                <button disabled=true onclick="generateFurigana()">Generate Furigana (unfinished)</button>
             </div>
             <div>
                 Romaji goes here. Check for accuracy, pacing, etc.<br>
@@ -35,7 +40,7 @@
             </div>
             <div>
                 As an example, the first Japanese line from Lovesick.</br>
-                I put this line into the top box:<br>
+                I first put this line into the top box:<br>
                 <b>諦めましょうこの人生</b><br><br>
                 For the next box, I need to match <i>every</i> kana with a pronounciation.<br>
                 Here's the first step, romaji:<br>
