better word width calculation

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <div>
                 <br>
                 Preview:
+                <div class="widther" id="widther"></div>
                 <div class="lyrics-container">
                     <div id="lyrics-preview"></div>
                 </div>
