minor refactor, new option (parallel)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
     <div>
-        My arsenal of lyric generating tools
-    </div>
+        My arsenal of lyric generating tools<br>
+        If you have any suggestions, requests, or issues to report, please contact me<br>
+        </div>
     <div id="chapter-root" class="index-container">
-
     </div>
 </body>
