--- a/mirage/index.html
+++ b/mirage/index.html
@@ -46,12 +46,16 @@
                 This tool creates mirage-like displays of text. To use it, input lines of text in lyric format<br>
                 (eg. spaces for new words, hyphen-spaces for new syllables)<br>
                 The second textbox specifies how many times the given text should appear in the mirage.<br>
-                The third textbox specifies the alpha value of given text (currently not working).<br>
+                The third textbox specifies the opacity value of given text (currently not working).<br>
                 <br><br>
                 /n to force a newline<br>
                 [space] for a new word<br>
                 -[space] for a new syllable<br>
-                =[space] for -[space]
+                =[space] for -[space]<br>
+                <br>
+                Note that text in later phrases is rendered above previous ones.<br>
+                You can leverage this to put a full-opacity phrase above the mirage.<br>
+                (once i properly support opacity, that is)
             </div>
         </div>
         <div class="column-right">
