improve index, add wide margin editor

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script defer type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    <div>
+    <div class="header">
         My arsenal of lyric generating tools<br>
         If you have any suggestions, requests, or issues to report, please contact me<br>
         </div>
