tons of cleanup

--- a/impact/index.html
+++ b/impact/index.html
@@ -19,7 +19,8 @@
     <div class="main">
         <div class="column-left">
             <div>
-                Normal lyric format applies (spaces between each syllable, hyphens to connect syllables)
+                Normal lyric format applies: spaces between each syllable,<br>
+                hyphens to connect syllables, \n to denote a newline<br>
                 <br>
                 <textarea onchange="readParameters(-1)" id="input" rows=2 cols=80
                         title="Input field"></textarea><br>
