--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <div class="header">
-        My arsenal of lyric generating tools<br>
-        If you have any suggestions, requests, or issues to report, please contact me<br>
+        gav's arsenal of lyric generating tools<br>
+        If you have any suggestions, requests, or issues to report, please contact me @gaviguy<br>
         </div>
     <div id="chapter-root" class="index-container">
     </div>
