--- a/parallel/index.html
+++ b/parallel/index.html
@@ -20,7 +20,8 @@
         <div class="column-left">
             <div>
                 The top line and the bottom line will run in parallel at the same time.<br>
-                Normal lyric format applies (spaces between each syllable, hyphens to connect syllables)
+                Most normal lyric format applies: spaces between each syllable,<br>
+                hyphens to connect syllables. <b>\n will not create a newline</b><br>
                 <br>
                 <textarea onchange="readParameters(-1)" id="input-top" rows=2 cols=80
                         title="Top input field"></textarea><br>
