--- a/furigana/index.html
+++ b/furigana/index.html
@@ -21,7 +21,8 @@
         <div class="column-left">
             <div>
                 Input a single line of Japanese lyrics here.<br>
-
+                <b>Normal lyric formatting does not apply here.</b><br>
+                <br>
                 <textarea onchange="readParameters(-1)" id="input-japanese" rows=2 cols=80
                         title="Kana input field"></textarea>
                 <br>
@@ -29,12 +30,15 @@
                 <button disabled=true onclick="generateFurigana()">Generate Furigana (unfinished)</button>
             </div>
             <div>
-                Romaji goes here. Check for accuracy, pacing, etc.<br>
-                A space indicates the start of a new kana.<br>
-                A | (pipe symbol) indicates the start of a new word.<br>
-                An * (asterisk) indicates a spot where no pronounciation should go.<br>
+                Romaji or furigana goes here. Check for accuracy, pacing, etc.<br>
+                Special formatting symbols:
+                <p style="margin-left: 1rem;">
+                    &nbsp&nbsp(space): indicates the start of a new syllable (and a new kana).<br>
+                    | (pipe): indicates the start of a new pronounced word.<br>
+                    * (asterisk): indicates a kana where no pronunciation should go.
+                </p>
                 <textarea onchange="readParameters(-1)" id="input-romaji" rows=2 cols=80
-                        title="Pronounciation input field"></textarea>
+                        title="Pronunciation input field"></textarea>
                 <br>
                 <button onclick="generateLyricString()"
                         title="Copy a string that can be used in the SRXD lyrics editor">Copy Output to Clipboard</button>
@@ -43,7 +47,7 @@
                 As an example, the first Japanese line from Lovesick.</br>
                 I first put this line into the top box:<br>
                 <b>諦めましょうこの人生</b><br><br>
-                For the next box, I need to match <i>every</i> kana with a pronounciation.<br>
+                For the next box, I need to match <i>every</i> kana with a pronunciation.<br>
                 Here's the first step, romaji:<br>
                 <b>akiramemashou kono jinsei</b><br><br>
                 Next, to assist the program, I will put pipes between each word,<br>
