--- a/furigana/index.html
+++ b/furigana/index.html
@@ -31,28 +31,26 @@
             </div>
             <div>
                 Romaji or furigana goes here. Check for accuracy, pacing, etc.<br>
-                Special formatting symbols:
-                <p style="margin-left: 1rem;">
-                    &nbsp&nbsp(space): indicates the start of a new syllable (and a new kana).<br>
-                    | (pipe): indicates the start of a new pronounced word.<br>
-                    * (asterisk): indicates a kana where no pronunciation should go.
-                </p>
+                Most normal lyric format applies: spaces between each syllable,<br>
+                hyphens to connect syllables. <b>\n will not create a newline</b><br>
+                <br>
+                An asterisk on its own will be treated as no pronunciation<br>
+                Asterisks <b>can</b> be used with hypens<br>
+                <br>
                 <textarea onchange="readParameters(-1)" id="input-romaji" rows=2 cols=80
                         title="Pronunciation input field"></textarea>
                 <br>
                 <button onclick="generateLyricString()"
-                        title="Copy a string that can be used in the SRXD lyrics editor">Copy Output to Clipboard</button>
+                        title="Copy output string to clipboard, for use in SRXD">Copy Output to Clipboard</button>
             </div>
             <div>
                 As an example, the first Japanese line from Lovesick.</br>
                 I first put this line into the top box:<br>
                 <b>諦めましょうこの人生</b><br><br>
-                For the next box, I need to match <i>every</i> kana with a pronunciation.<br>
-                Here's the first step, romaji:<br>
+                For the next box, I start with romaji:<br>
                 <b>akiramemashou kono jinsei</b><br><br>
-                Next, to assist the program, I will put pipes between each word,<br>
-                and spaces between each kana's pronunciation:<br>
-                <b>akira me ma sh o u | ko no | jin sei</b><br><br>
+                Next, I need to split the romaji into chunks that match each kana:<br>
+                <b>akira- me- ma- sh- o- u  ko- no  jin- sei</b><br><br>
                 Notice how the number of kana and the number of pronounced chunks match.<br><br>
                 With both boxes populated, I can click "Copy Output to Clipboard" and<br>
                 paste into the Spin Rhythm lyric editor.<br>
@@ -61,27 +59,32 @@
         <div class="column-right">
             <div id="config">
                 <div>
-                    <input onchange="readParameters(0)" type="number" value="12" title="Spacing between the start of each kana"
+                    <input onchange="readParameters(0)" type="number" value="12"
+                    title="Spacing between the start of each kana"
                             step=1 id="config-kana-spacing">Horizontal kana spacing</input>
                     <button onClick="revertConfig(0)">default</button>
                 </div>
                 <div>
-                    <input onchange="readParameters(1)" type="number" value="12" title="Font size of the kana line"
+                    <input onchange="readParameters(1)" type="number" value="12"
+                    title="Font size of the kana line"
                             step=1 id="config-kana-size">Kana size</input>
                     <button onClick="revertConfig(1)">default</button>
                 </div>
                 <div>
-                    <input onchange="readParameters(2)" type="number" value="8" title="Font size of the romaji line"
+                    <input onchange="readParameters(2)" type="number" value="8"
+                    title="Font size of the romaji line"
                             step=1 id="config-romaji-size">Romaji size</input>
                     <button onClick="revertConfig(2)">default</button>
                 </div>
                 <div>
-                    <input onchange="readParameters(3)" type="number" value="15" title="Vertical space between the kana and romaji lines"
+                    <input onchange="readParameters(3)" type="number" value="15"
+                    title="Vertical space between the kana and romaji lines"
                             step=1 id="config-romaji-height">Romaji height</input>
                     <button onClick="revertConfig(3)">default</button>
                 </div>
                 <div style="margin-left:145px">
-                    <input onchange="readParameters(4)" type="checkbox" value = false title="Render the romaji normally spaced instead of near their source kana"
+                    <input onchange="readParameters(4)" type="checkbox" checked = true
+                    title="Render the romaji normally spaced instead of near their source kana"
                             id="config-romaji-mode">Centered romaji mode</input>
                 </div>
             </div>
