tons of small fixes, improvement to parallel

--- a/furigana/index.html
+++ b/furigana/index.html
@@ -50,8 +50,12 @@
                 For the next box, I start with romaji:<br>
                 <b>akiramemashou kono jinsei</b><br><br>
                 Next, I need to split the romaji into chunks that match each kana:<br>
-                <b>akira- me- ma- sh- o- u  ko- no  jin- sei</b><br><br>
-                Notice how the number of kana and the number of pronounced chunks match.<br><br>
+                <b>akira- me- ma- sh- o- u  ko- no  jin- sei</b><br>
+                <br>
+                If I wanted to do furigana, I would use something like this instead:<br>
+                <b>あきら * * * * * * * じん- せい</b><br>
+                <br>
+                Notice how the number of kana and the number of pronounced chunks match.<br>
                 With both boxes populated, I can click "Copy Output to Clipboard" and<br>
                 paste into the Spin Rhythm lyric editor.<br>
             </div>
@@ -92,6 +96,7 @@
             <div>
                 <br>
                 Preview:
+                <i><small><br>Not always accurate. Please test in-game!</small></i>
                 <div class="widther" id="widther"></div>
                 <div class="preview-container">
                     <div id="preview"></div>
