--- a/impact/index.html
+++ b/impact/index.html
@@ -76,6 +76,7 @@
             <div>
                 <br>
                 Preview:
+                <i><small><br>Not always accurate. Please test in-game!</small></i>
                 <div class="widther" id="widther"></div>
                 <div class="preview-container">
                     <div id="preview"></div>
