--- a/parallel/index.html
+++ b/parallel/index.html
@@ -40,20 +40,29 @@
         <div class="column-right">
             <div id="config">
                 <div>
-                    <input onchange="readParameters(0)" type="number" value="10" title="Text size"
-                            step=1 id="config-text-size">Text size</input>
+                    <input onchange="readParameters(0)" type="number" value="10"
+                            title="Top line text size"
+                            step=1 id="config-top-size">Top text size</input>
                     <button onClick="revertConfig(0)">default</button>
                 </div>
                 <div>
-                    <input onchange="readParameters(1)" type="number" value="12" title="Vertical space between each line"
-                            step=1 id="config-vertical-spacing">Vertical spacing</input>
+                    <input onchange="readParameters(1)" type="number" value="10"
+                            title="Bottom line text size"
+                            step=1 id="config-bottom-size">Bottom text size</input>
                     <button onClick="revertConfig(1)">default</button>
+                </div>
+                <div>
+                    <input onchange="readParameters(2)" type="number" value="12"
+                            title="Vertical space between each line"
+                            step=1 id="config-vertical-spacing">Vertical spacing</input>
+                    <button onClick="revertConfig(2)">default</button>
                 </div>
             </div>
             
             <div>
                 <br>
                 Preview:
+                <i><small><br>Not always accurate. Please test in-game!</small></i>
                 <div class="widther" id="widther"></div>
                 <div class="preview-container">
                     <div id="preview"></div>
